include/libheif/heif.h

struct heif_context;
struct heif_image_handle;
enum heif_error_code
{
  heif_error_Ok = 0,
  heif_error_Input_does_not_exist = 1,
  heif_error_Invalid_input = 2,
  heif_error_Unsupported_filetype = 3,
  heif_error_Unsupported_feature = 4,
  heif_error_Usage_error = 5,
  heif_error_Memory_allocation_error = 6,
  heif_error_Decoder_plugin_error = 7,
  heif_error_Encoder_plugin_error = 8,
  heif_error_Encoding_error = 9,
  heif_error_Color_profile_does_not_exist = 10,
  heif_error_Plugin_loading_error = 11,
  heif_error_Canceled = 12
};
enum heif_suberror_code
{
  heif_suberror_Unspecified = 0,
  heif_suberror_End_of_data = 100,
  heif_suberror_Invalid_box_size = 101,
  heif_suberror_No_ftyp_box = 102,
  heif_suberror_No_idat_box = 103,
  heif_suberror_No_meta_box = 104,
  heif_suberror_No_hdlr_box = 105,
  heif_suberror_No_hvcC_box = 106,
  heif_suberror_No_pitm_box = 107,
  heif_suberror_No_ipco_box = 108,
  heif_suberror_No_ipma_box = 109,
  heif_suberror_No_iloc_box = 110,
  heif_suberror_No_iinf_box = 111,
  heif_suberror_No_iprp_box = 112,
  heif_suberror_No_iref_box = 113,
  heif_suberror_No_pict_handler = 114,
  heif_suberror_Ipma_box_references_nonexisting_property = 115,
  heif_suberror_No_properties_assigned_to_item = 116,
  heif_suberror_No_item_data = 117,
  heif_suberror_Invalid_grid_data = 118,
  heif_suberror_Missing_grid_images = 119,
  heif_suberror_Invalid_clean_aperture = 120,
  heif_suberror_Invalid_overlay_data = 121,
  heif_suberror_Overlay_image_outside_of_canvas = 122,
  heif_suberror_Auxiliary_image_type_unspecified = 123,
  heif_suberror_No_or_invalid_primary_item = 124,
  heif_suberror_No_infe_box = 125,
  heif_suberror_Unknown_color_profile_type = 126,
  heif_suberror_Wrong_tile_image_chroma_format = 127,
  heif_suberror_Invalid_fractional_number = 128,
  heif_suberror_Invalid_image_size = 129,
  heif_suberror_Invalid_pixi_box = 130,
  heif_suberror_No_av1C_box = 131,
  heif_suberror_Wrong_tile_image_pixel_depth = 132,
  heif_suberror_Unknown_NCLX_color_primaries = 133,
  heif_suberror_Unknown_NCLX_transfer_characteristics = 134,
  heif_suberror_Unknown_NCLX_matrix_coefficients = 135,
  heif_suberror_Invalid_region_data = 136,
  heif_suberror_No_ispe_property = 137,
  heif_suberror_Camera_intrinsic_matrix_undefined = 138,
  heif_suberror_Camera_extrinsic_matrix_undefined = 139,
  heif_suberror_Invalid_J2K_codestream = 140,
  heif_suberror_No_vvcC_box = 141,
  heif_suberror_No_icbr_box = 142,
  heif_suberror_No_avcC_box = 143,
  heif_suberror_Invalid_mini_box = 149,
  heif_suberror_Decompression_invalid_data = 150,
  heif_suberror_Security_limit_exceeded = 1000,
  heif_suberror_Compression_initialisation_error = 1001,
  heif_suberror_Nonexisting_item_referenced = 2000, 
  heif_suberror_Null_pointer_argument = 2001,
  heif_suberror_Nonexisting_image_channel_referenced = 2002,
  heif_suberror_Unsupported_plugin_version = 2003,
  heif_suberror_Unsupported_writer_version = 2004,
  heif_suberror_Unsupported_parameter = 2005,
  heif_suberror_Invalid_parameter_value = 2006,
  heif_suberror_Invalid_property = 2007,
  heif_suberror_Item_reference_cycle = 2008,
  heif_suberror_Unsupported_codec = 3000,
  heif_suberror_Unsupported_image_type = 3001,
  heif_suberror_Unsupported_data_version = 3002,
  heif_suberror_Unsupported_color_conversion = 3003,
  heif_suberror_Unsupported_item_construction_method = 3004,
  heif_suberror_Unsupported_header_compression_method = 3005,
  heif_suberror_Unsupported_generic_compression_method = 3006,
  heif_suberror_Unsupported_essential_property = 3007,
  heif_suberror_Unsupported_bit_depth = 4000,
  heif_suberror_Cannot_write_output_data = 5000,
  heif_suberror_Encoder_initialization = 5001,
  heif_suberror_Encoder_encoding = 5002,
  heif_suberror_Encoder_cleanup = 5003,
  heif_suberror_Too_many_regions = 5004,
  heif_suberror_Plugin_loading_error = 6000,         
  heif_suberror_Plugin_is_not_loaded = 6001,         
  heif_suberror_Cannot_read_plugin_directory = 6002, 
  heif_suberror_No_matching_decoder_installed = 6003 
};
struct heif_error
{
  enum heif_error_code code;
  enum heif_suberror_code subcode;
  const char* message;
};
typedef uint32_t heif_item_id;
struct heif_reading_options;
enum heif_reader_grow_status
{
  heif_reader_grow_status_size_reached,    
  heif_reader_grow_status_timeout,         
  heif_reader_grow_status_size_beyond_eof, 
  heif_reader_grow_status_error            
};
struct heif_reader_range_request_result
{
  enum heif_reader_grow_status status; 
  uint64_t range_end;
  int reader_error_code;        
  const char* reader_error_msg; 
};
struct heif_reader
{
  int reader_api_version;
  int64_t (* get_position)(void* userdata);
  int (* read)(void* data,
               size_t size,
               void* userdata);
  int (* seek)(int64_t position,
               void* userdata);
  enum heif_reader_grow_status (* wait_for_file_size)(int64_t target_size, void* userdata);
  struct heif_reader_range_request_result (*request_range)(uint64_t start_pos, uint64_t end_pos, void* userdata);
  void (*preload_range_hint)(uint64_t start_pos, uint64_t end_pos, void* userdata);
  void (*release_file_range)(uint64_t start_pos, uint64_t end_pos, void* userdata);
  void (*release_error_msg)(const char* msg);
};
LIBHEIF_API
struct heif_error heif_context_read_from_memory_without_copy(struct heif_context*,
                                                             const void* mem, size_t size,
                                                             const struct heif_reading_options*);
LIBHEIF_API
struct heif_error heif_context_read_from_reader(struct heif_context*,
                                                const struct heif_reader* reader,
                                                void* userdata,
                                                const struct heif_reading_options*);
LIBHEIF_API
int heif_context_get_number_of_top_level_images(struct heif_context* ctx);
LIBHEIF_API
int heif_context_is_top_level_image_ID(struct heif_context* ctx, heif_item_id id);
LIBHEIF_API
int heif_context_get_list_of_top_level_image_IDs(struct heif_context* ctx,
                                                 heif_item_id* ID_array,
                                                 int count);
LIBHEIF_API
struct heif_error heif_context_get_primary_image_ID(struct heif_context* ctx, heif_item_id* id);
LIBHEIF_API
struct heif_error heif_context_get_primary_image_handle(struct heif_context* ctx,
                                                        struct heif_image_handle**);
LIBHEIF_API
struct heif_error heif_context_get_image_handle(struct heif_context* ctx,
                                                heif_item_id id,
                                                struct heif_image_handle**);
LIBHEIF_API
void heif_context_debug_dump_boxes_to_file(struct heif_context* ctx, int fd);
LIBHEIF_API
void heif_context_set_maximum_image_size_limit(struct heif_context* ctx, int maximum_width);
LIBHEIF_API
void heif_image_handle_release(const struct heif_image_handle*);
LIBHEIF_API
int heif_image_handle_is_primary_image(const struct heif_image_handle* handle);
LIBHEIF_API
int heif_image_handle_get_width(const struct heif_image_handle* handle);
LIBHEIF_API
int heif_image_handle_get_height(const struct heif_image_handle* handle);
LIBHEIF_API
int heif_image_handle_has_alpha_channel(const struct heif_image_handle*);
LIBHEIF_API
int heif_image_handle_get_luma_bits_per_pixel(const struct heif_image_handle*);
LIBHEIF_API
int heif_image_handle_get_chroma_bits_per_pixel(const struct heif_image_handle*);
LIBHEIF_API
int heif_image_handle_get_ispe_width(const struct heif_image_handle* handle);
LIBHEIF_API
int heif_image_handle_get_ispe_height(const struct heif_image_handle* handle);
LIBHEIF_API
int heif_image_handle_has_depth_image(const struct heif_image_handle*);
LIBHEIF_API
int heif_image_handle_get_number_of_depth_images(const struct heif_image_handle* handle);
LIBHEIF_API
int heif_image_handle_get_list_of_depth_image_IDs(const struct heif_image_handle* handle,
                                                  heif_item_id* ids, int count);
LIBHEIF_API
struct heif_error heif_image_handle_get_depth_image_handle(const struct heif_image_handle* handle,
                                                           heif_item_id depth_image_id,
                                                           struct heif_image_handle** out_depth_handle);
enum heif_depth_representation_type
{
  heif_depth_representation_type_uniform_inverse_Z = 0,
  heif_depth_representation_type_uniform_disparity = 1,
  heif_depth_representation_type_uniform_Z = 2,
  heif_depth_representation_type_nonuniform_disparity = 3
};
struct heif_depth_representation_info
{
  uint8_t version;
  uint8_t has_z_near;
  uint8_t has_z_far;
  uint8_t has_d_min;
  uint8_t has_d_max;
  double z_near;
  double z_far;
  double d_min;
  double d_max;
  enum heif_depth_representation_type depth_representation_type;
  uint32_t disparity_reference_view;
  uint32_t depth_nonlinear_representation_model_size;
  uint8_t* depth_nonlinear_representation_model;
};
LIBHEIF_API
void heif_depth_representation_info_free(const struct heif_depth_representation_info* info);
LIBHEIF_API
int heif_image_handle_get_depth_image_representation_info(const struct heif_image_handle* handle,
                                                          heif_item_id depth_image_id,
                                                          const struct heif_depth_representation_info** out);
LIBHEIF_API
int heif_image_handle_get_number_of_thumbnails(const struct heif_image_handle* handle);
LIBHEIF_API
int heif_image_handle_get_list_of_thumbnail_IDs(const struct heif_image_handle* handle,
                                                heif_item_id* ids, int count);
LIBHEIF_API
struct heif_error heif_image_handle_get_thumbnail(const struct heif_image_handle* main_image_handle,
                                                  heif_item_id thumbnail_id,
                                                  struct heif_image_handle** out_thumbnail_handle);
LIBHEIF_API
int heif_image_handle_get_number_of_metadata_blocks(const struct heif_image_handle* handle,
                                                    const char* type_filter);
LIBHEIF_API
int heif_image_handle_get_list_of_metadata_block_IDs(const struct heif_image_handle* handle,
                                                     const char* type_filter,
                                                     heif_item_id* ids, int count);
LIBHEIF_API
const char* heif_image_handle_get_metadata_type(const struct heif_image_handle* handle,
                                                heif_item_id metadata_id);
LIBHEIF_API
const char* heif_image_handle_get_metadata_content_type(const struct heif_image_handle* handle,
                                                        heif_item_id metadata_id);
LIBHEIF_API
size_t heif_image_handle_get_metadata_size(const struct heif_image_handle* handle,
                                           heif_item_id metadata_id);
LIBHEIF_API
struct heif_error heif_image_handle_get_metadata(const struct heif_image_handle* handle,
                                                 heif_item_id metadata_id,
                                                 void* out_data);